src/app/layouts/backend/index.component.scss
@use "../../../styles.scss" as *;

.drawer-container {
  width: 100dvw;
  height: 100vh;
  overflow: hidden;
  display: flex;

  mat-drawer {
    width: 25%;
    border-radius: 0;
    padding: 10px 30px 20px 30px;
    background-color: $white;

    .brand-wrapper {
      width: 100%;
      padding-bottom: 10px;
      margin-bottom: 20px;

      .brand {
        all: unset;
        font-size: 2rem;
        color: $dark-purple;
        text-decoration: none;
        cursor: pointer;
      }
    }

    .menu-wrapper {
      display: flex;
      flex-direction: column;
      gap: 10px;

      .btn-menu-item {
        border-radius: 15px;
        display: flex;
        justify-content: start;
        padding: 25px 30px;
        background-color: transparent;
        color: $black;
        font-size: 1rem;
        
        &.active {
          box-shadow: 0px 8px 10px rgba($purple, .3);
          background-color: $dark-purple;
          color: $white;
        }

        &:not(.active):hover {
          background-color: rgba($purple, .2);
        }
      }
    }
  }

  mat-drawer-content {
    position: relative;
    width: 75%;

    .header-admin {
      position: sticky;
      top: 0;
      left: 0;
      width: 100%;
      padding: 0px 30px;
      height: 65px;
      background-color: $white;
      display: flex;
      justify-content: space-between;
      align-items: center;
      box-shadow: 3px 10px 20px rgba($black, .06);

      .welcome {
        min-width: 150px;
      }
    }

    .content-admin {
      width: 100%;
      min-height: 80vh;
      height: auto;
      padding: 20px 30px 15px 30px;
      background-color: $gray-white;
    }
  }
}

@media screen and (max-width: $max-width-tablet) {
  .drawer-container {
    width: 100dvw;
  
    mat-drawer {
      width: 320px;
      max-width: 350px;
    }
    
    mat-drawer-content {
      width: 100%;
    }
  }
}

